--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:clean_recent_mini"
         mc:Ignorable="d"
+        Style="{StaticResource CustomWindowStyle}"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+
     </Grid>
 </Window>
