feat: add i18n feature

--- a/App.xaml
+++ b/App.xaml
@@ -13,6 +13,9 @@
                 <ResourceDictionary Source="Themes/ControlColours.xaml"/>
                 <!-- Contains all of the control styles (Button, ListBox, etc) -->
                 <ResourceDictionary Source="Themes/Controls.xaml"/>
+
+                <!-- App locale resources -->
+                <ResourceDictionary Source="Locale/en-US.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
