--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:clean_recent_mini"
         mc:Ignorable="d"
         Style="{StaticResource CustomWindowStyle}"
-        Title="MainWindow" Height="450" Width="800">
+        Title="{DynamicResource AppName}" Height="360" Width="500">
     <Grid>
 
     </Grid>
