--- a/Themes/ColourDictionaries/LightTheme.xaml
+++ b/Themes/ColourDictionaries/LightTheme.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
     <Color x:Key="AColour.Foreground.Static"                   R="15"  G="15"  B="15"  A="255"/>
     <Color x:Key="AColour.Foreground.Deeper"                   R="35"  G="35"  B="35"  A="255"/>
     <Color x:Key="AColour.Foreground.Disabled"                 R="65"  G="65"  B="65"  A="255"/>
@@ -26,10 +26,14 @@
     <Color x:Key="AColour.Tone1.Border.Static"                 R="221" G="221" B="221" A="255"/>
     <Color x:Key="AColour.Tone2.Background.Static"             R="227" G="227" B="227" A="255"/>
     <Color x:Key="AColour.Tone2.Border.Static"                 R="217" G="217" B="217" A="255"/>
-    <Color x:Key="AColour.Tone3.Background.Static"             R="222" G="222" B="222" A="255"/>
-    <Color x:Key="AColour.Tone3.Border.Static"                 R="202" G="202" B="202" A="255"/>
-    <Color x:Key="AColour.Tone4.Background.Static"             R="219" G="219" B="219" A="255"/>
-    <Color x:Key="AColour.Tone4.Border.Static"                 R="212" G="212" B="212" A="255"/>
+    <!--<Color x:Key="AColour.Tone3.Background.Static"             R="222" G="222" B="222" A="255"/>-->
+    <Color x:Key="AColour.Tone3.Background.Static"             R="245" G="245" B="245" A="255"/>
+    <!--<Color x:Key="AColour.Tone3.Border.Static"                 R="202" G="202" B="202" A="255"/>-->
+    <Color x:Key="AColour.Tone3.Border.Static"                 R="245" G="245" B="245" A="255"/>
+    <!--<Color x:Key="AColour.Tone4.Background.Static"             R="219" G="219" B="219" A="255"/>-->
+    <Color x:Key="AColour.Tone4.Background.Static"             R="255" G="255" B="255" A="255"/>
+    <!--<Color x:Key="AColour.Tone4.Border.Static"                 R="212" G="212" B="212" A="255"/>-->
+    <Color x:Key="AColour.Tone4.Border.Static"                 R="232" G="232" B="232" A="255"/>
     <Color x:Key="AColour.Tone4.Background.MouseOver"          R="202" G="202" B="202" A="255"/>
     <Color x:Key="AColour.Tone4.Border.MouseOver"              R="192" G="192" B="192" A="255"/>
     <Color x:Key="AColour.Tone4.Background.MouseDown"          R="207" G="207" B="207" A="255"/>
@@ -40,9 +44,12 @@
     <Color x:Key="AColour.Tone4.Border.Selected.Inactive"      R="201" G="201" B="201" A="255"/>
     <Color x:Key="AColour.Tone4.Background.Disabled"           R="175" G="175" B="175" A="255"/>
     <Color x:Key="AColour.Tone4.Border.Disabled"               R="165" G="165" B="165" A="255"/>
-    <Color x:Key="AColour.Tone5.Background.Static"             R="214" G="214" B="214" A="255"/>
-    <Color x:Key="AColour.Tone5.Border.Static"                 R="204" G="204" B="204" A="255"/>
-    <Color x:Key="AColour.Tone5.Background.MouseOver"          R="191" G="191" B="191" A="255"/>
+    <!--<Color x:Key="AColour.Tone5.Background.Static"             R="214" G="214" B="214" A="255"/>-->
+    <Color x:Key="AColour.Tone5.Background.Static"             R="255" G="255" B="255" A="255"/>
+    <!--<Color x:Key="AColour.Tone5.Border.Static"                 R="204" G="204" B="204" A="255"/>-->
+    <Color x:Key="AColour.Tone5.Border.Static"                 R="245" G="245" B="245" A="255"/>
+    <!--<Color x:Key="AColour.Tone5.Background.MouseOver"          R="191" G="191" B="191" A="255"/>-->
+    <Color x:Key="AColour.Tone5.Background.MouseOver"          R="245" G="245" B="245" A="255"/>
     <Color x:Key="AColour.Tone5.Border.MouseOver"              R="181" G="181" B="181" A="255"/>
     <Color x:Key="AColour.Tone5.Background.MouseDown"          R="197" G="197" B="197" A="255"/>
     <Color x:Key="AColour.Tone5.Border.MouseDown"              R="187" G="187" B="187" A="255"/>
@@ -53,7 +60,8 @@
     <Color x:Key="AColour.Tone5.Background.Disabled"           R="162" G="162" B="162" A="255"/>
     <Color x:Key="AColour.Tone5.Border.Disabled"               R="150" G="150" B="150" A="255"/>
     <Color x:Key="AColour.Tone6.Background.Static"             R="206" G="206" B="206" A="255"/>
-    <Color x:Key="AColour.Tone6.Border.Static"                 R="196" G="196" B="196" A="255"/>
+    <!--<Color x:Key="AColour.Tone6.Border.Static"                 R="196" G="196" B="196" A="255"/>-->
+    <Color x:Key="AColour.Tone6.Border.Static"                 R="245" G="245" B="245" A="255"/>
     <Color x:Key="AColour.Tone6.Background.MouseOver"          R="183" G="183" B="183" A="255"/>
     <Color x:Key="AColour.Tone6.Border.MouseOver"              R="163" G="163" B="163" A="255"/>
     <Color x:Key="AColour.Tone6.Background.MouseDown"          R="189" G="189" B="189" A="255"/>
